[package]
name = "derive"
version = "0.1.0"
authors = ["ly3xqhl8g9 <ly3xqhl8g9@plurid.com>"]
edition = "2018"
description = "Always-Active, Character-for-Character Distributed Version Control System"
readme = "README.md"
license = "MIT"
repository = "https://github.com/plurid/derive"

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
